tests/snapshots/lib__snapshots__simple_report@parse_spec_global.env_filter.snap
---
source: tests/snapshots.rs
assertion_line: 76
expression: "warn,crate2=debug"
---
(no warnings)
