tests/snapshots/lib__snapshots__simple_report@parse_spec_valid_filter.env_filter.snap
---
source: tests/snapshots.rs
assertion_line: 76
expression: "crate1::mod1=error,crate1::mod2,crate2=debug/abc"
---
(no warnings)
