tests/snapshots/lib__snapshots__simple_report@regex.env_filter.snap
---
source: tests/snapshots.rs
assertion_line: 76
expression: "error,hello=warn/[0-9]"
---
(no warnings)
